add fronius data

--- a/AmeWeb/Properties/launchSettings.json
+++ b/AmeWeb/Properties/launchSettings.json
@@ -15,7 +15,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "AmeDhcp": {
+    "AmeWeb": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
       "launchBrowser": true,
