--- a/AmeWeb/appsettings.json
+++ b/AmeWeb/appsettings.json
@@ -9,7 +9,9 @@
   "AllowedHosts": "*",
   "DhcpConfigFile": "C:\\dhcpsrv2.5.2\\dhcpsrv.ini",
   "Unifi": {
+    "Address": "https://localhost:8443",
     "User": "",
     "Pass": ""
-  }
+  },
+  "FroniusUrl": "192.168.8.210" //solar_api/v1/GetPowerFlowRealtimeData.fcgi?Scope=Device&DeviceIndex=1&DataCollection=CommonInverterData"
 }
