--- a/AmeWeb/AmeWeb.csproj
+++ b/AmeWeb/AmeWeb.csproj
@@ -6,7 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ChartJs.Blazor.Fork" Version="2.0.2" />
+    <PackageReference Include="FroniusSolarClient.Core" Version="0.4.0" />
     <PackageReference Include="ini-parser" Version="2.5.2" />
+    <PackageReference Include="System.Reactive" Version="5.0.0" />
     <PackageReference Include="UnifiApi" Version="1.0.0.11" />
   </ItemGroup>
 
